--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Baskara | Formula Resolvente</title>
+    <title>Bhaskara | Formula Resolvente</title>
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
 </head>
 <body>
 
     <div class="container-center">
-        <h5>Baskara</h5>
+        <h5>Bhaskara</h5>
         <div id="numeros">
             <div class="input-group"><label>A:</label><input type="text" id="a" pattern="[0-9]{1,4}"></div>
             
