Inputs validation and message function added

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="container-center">
         <h5>Bhaskara</h5>
         <div id="numeros">
-            <div class="input-group"><label>A:</label><input type="text" id="a" pattern="[0-9]{1,4}"></div>
+            <div class="input-group"><label>A:</label><input class="input" type="text" id="a"></div>
             
-            <div class="input-group"><label>B:</label><input type="text" id="b" pattern="[0-9]{1,4}"></div>
+            <div class="input-group"><label>B:</label><input class="input" type="text" id="b"></div>
             
-            <div class="input-group"><label>C:</label><input type="text" id="c" pattern="[0-9]{1,4}"></div>
+            <div class="input-group"><label>C:</label><input class="input" type="text" id="c"></div>
         </div>
-        <br>
+        <br><br><br>
         <button id="btnAplicar">Aplicar</button>
         <button id="btnLimpiar">Limpiar</button>
         <br><br>
